syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";
option go_package = "v1";

message ConfigFileGroup {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue namespace = 3;
  google.protobuf.StringValue comment = 4;
  google.protobuf.StringValue create_time = 5;
  google.protobuf.StringValue create_by = 6;
  google.protobuf.StringValue modify_time = 7;
  google.protobuf.StringValue modify_by = 8;
  google.protobuf.UInt64Value fileCount = 9;

  repeated google.protobuf.StringValue user_ids = 10 [json_name = "user_ids"];
  repeated google.protobuf.StringValue group_ids = 11 [json_name = "group_ids"];

  repeated google.protobuf.StringValue remove_user_ids = 13 [json_name = "remove_user_ids"];
  repeated google.protobuf.StringValue remove_group_ids = 14 [json_name = "remove_group_ids"];

  google.protobuf.BoolValue editable = 15;
  google.protobuf.StringValue owner = 16;

}

message ConfigFile {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue namespace = 3;
  google.protobuf.StringValue group = 4;
  google.protobuf.StringValue content = 5;
  google.protobuf.StringValue format = 6;
  google.protobuf.StringValue comment = 7;
  google.protobuf.StringValue status = 8;
  repeated ConfigFileTag tags = 9;
  google.protobuf.StringValue create_time = 10;
  google.protobuf.StringValue create_by = 11;
  google.protobuf.StringValue modify_time = 12;
  google.protobuf.StringValue modify_by = 13;
  google.protobuf.StringValue release_time = 14;
  google.protobuf.StringValue release_by = 15;
}

message ConfigFileTag {
  google.protobuf.StringValue key = 1;
  google.protobuf.StringValue value = 2;
}

message ConfigFileRelease {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue namespace = 3;
  google.protobuf.StringValue group = 4;
  google.protobuf.StringValue file_name = 5;
  google.protobuf.StringValue content = 6;
  google.protobuf.StringValue comment = 7;
  google.protobuf.StringValue md5 = 8;
  google.protobuf.UInt64Value version = 9;
  google.protobuf.StringValue create_time = 10;
  google.protobuf.StringValue create_by = 11;
  google.protobuf.StringValue modify_time = 12;
  google.protobuf.StringValue modify_by = 13;
}

message ConfigFileReleaseHistory {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue namespace = 3;
  google.protobuf.StringValue group = 4;
  google.protobuf.StringValue file_name = 5;
  google.protobuf.StringValue content = 6;
  google.protobuf.StringValue format = 7;
  google.protobuf.StringValue comment = 8;
  google.protobuf.StringValue md5 = 9;
  google.protobuf.StringValue type = 10;
  google.protobuf.StringValue status = 11;
  repeated ConfigFileTag tags = 12;
  google.protobuf.StringValue create_time = 13;
  google.protobuf.StringValue create_by = 14;
  google.protobuf.StringValue modify_time = 15;
  google.protobuf.StringValue modify_by = 16;
}

message ConfigFileTemplate {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue content = 3;
  google.protobuf.StringValue format = 4;
  google.protobuf.StringValue comment = 5;
  google.protobuf.StringValue create_time = 6;
  google.protobuf.StringValue create_by = 7;
  google.protobuf.StringValue modify_time = 8;
  google.protobuf.StringValue modify_by = 9;
}

message ClientConfigFileInfo {
  google.protobuf.StringValue namespace = 1;
  google.protobuf.StringValue group = 2;
  google.protobuf.StringValue file_name = 3;
  google.protobuf.StringValue content = 4;
  google.protobuf.UInt64Value version = 5;
  google.protobuf.StringValue md5 = 6;
}

message ClientWatchConfigFileRequest {
  google.protobuf.StringValue client_ip = 1;
  google.protobuf.StringValue service_name = 2;
  repeated ClientConfigFileInfo watch_files = 3;
}
